# autotune_definitivo

./: .gitignore  CMakeLists.txt  INTEGRATION.md  README_WIND_FIX_V6.md  VALIDATION_WIND_FIX_V6.md
.github/workflows/: build_mac.yml  build_windows.yml  hardening-ci.yml
Autotune/: .gitignore  .~lock.Senza nome 1.odt#  CMakeLists.txt  Senza nome 1.odt
Autotune/.github/workflow/: build.yml
Autotune/.github/workflows/: main.yml
Autotune/Source/: CustomScalePresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleDefinitions.h
CreativeTempo_V1_complete/: CustomScaleEditor.cpp  CustomScaleEditor.h  Tempo.cpp  Tempo.h
Docs/: HARDENING_STATUS.md
Source/: CustomScalePresets.cpp  LivePitchProcessor.h  ModernPitchEngine.cpp  ModernPitchEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleDefinitions.cpp
Tests/: AutotuneTests.cmake  IntegrationSmokeTest.cpp  ModernPitchEngineTests.cpp  ProcessorStressTests.cpp  RealWorldRegression.cpp  RealWorldTests.cpp  SanitizerSmoke.cpp  TestModernPitchEngine.cpp  WindFixValidation.cpp  compare_regression_metrics.py
Tools/: apply_hardening.py  run_pluginval_strict10.ps1
